<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CustomerOverviewFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical"
    tools:context=".customer.CustomerOverviewFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_above="@+id/buttonsoverview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:background="@drawable/restaurant_overview" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_below="@+id/imgProfile"
                android:background="@drawable/button_background_login" />

          <LinearLayout
                android:id="@+id/lnLy2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/view1"
                android:orientation="horizontal"
                android:padding="3dp"
              android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/txtRestoName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_name"
                    android:textColor="#0E0E0E"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="10dp"
                    android:fontFamily="monospace"/>

                <ImageView
                    android:id="@+id/txtRating"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="50dp"
                    android:src="@drawable/fourstar"
                    android:layout_marginTop="3dp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutRest"
                android:layout_below="@id/lnLy2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/txtRestoType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/restaurant_type"
                    android:fontFamily="serif"
                    android:textSize="19sp"
                    android:textStyle="italic"
                    android:layout_marginLeft="10dp"/>

                <ImageView
                    app:srcCompat="@drawable/ic_call_black_24dp"
                    android:layout_width="40dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="80dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnLY3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayoutRest"
                android:orientation="vertical"
                android:padding="3dp">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/button_background_login" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewClock"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/ic_clock"
                        android:contentDescription="TODO"
                        app:layout_constraintBottom_toTopOf="@id/txtOpeningTime"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageView
                        android:id="@+id/imageViewLocation"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/ic_location"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.689"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/txtOpeningTime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/restaurant_timing"
                        android:textSize="15sp"
                        android:fontFamily="serif"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/txtAddress"
                        app:layout_constraintHorizontal_bias="0.06"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/imageViewClock"
                        app:layout_constraintVertical_bias="1.0" />

                    <TextView
                        android:id="@+id/txtAddress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text="@string/restaurant_address"
                        android:textSize="15sp"
                        android:fontFamily="serif"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.719"
                        app:layout_constraintStart_toEndOf="@+id/txtOpeningTime"
                        app:layout_constraintTop_toBottomOf="@id/imageViewLocation" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1sp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/button_background_login" />

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/restaurant_description"
                    android:textSize="14sp"
                    android:fontFamily="serif"/>

            </LinearLayout>

            <View
                android:layout_below="@+id/lnLY3"
                android:id="@+id/view10"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginTop="5dp"
                android:background="@drawable/button_background_login" />


            <LinearLayout
                android:id="@+id/linearLayoutDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/view10"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/txtD"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DETAILS"
                    android:fontFamily="serif-monospace"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="#FF000000"
                    />
                <TextView
                    android:text="CUSINES"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/cusines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="#FF0000"
                    />

                <TextView
                    android:text="@string/topDish"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="Butter Chicken, Samosa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="#FF000000"
                    />

                <TextView
                    android:text="Average Cost"
                    android:textSize="15sp"
                    android:textAllCaps="true"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:text="@string/Cashorcard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="#FF000000"
                    />

                <TextView
                    android:text="OTHER INFO"
                    android:textAllCaps="true"
                    android:textSize="15sp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/LL"
                android:layout_below="@+id/linearLayoutDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_check_circle_black_24dp"/>
                <TextView
                    android:text="Takeaway Available"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF000000"/>

                <ImageView
                    android:layout_marginLeft="60dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_check_circle_black_24dp"/>
                <TextView
                    android:text="Vegan Options"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF000000"/>



            </LinearLayout>
            <LinearLayout
                android:id="@+id/LL1"
                android:layout_below="@+id/LL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_check_circle_black_24dp"/>
                <TextView
                    android:text="OutDoor Seating"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF000000"/>

                <ImageView
                    android:layout_marginLeft="77dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_check_circle_black_24dp"/>
                <TextView
                    android:text="Full Bar Available"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF000000"/>



            </LinearLayout>
            <LinearLayout
                android:id="@+id/LL2"
                android:layout_below="@+id/LL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_check_circle_black_24dp"/>
                <TextView
                    android:text="InDoor Seating"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF000000"/>

                <ImageView
                    android:layout_marginLeft="85dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_check_circle_black_24dp"/>
                <TextView
                    android:text="Free parking"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="2dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#FF000000"/>



            </LinearLayout>

            <View
                android:layout_below="@+id/LL2"
                android:id="@+id/view11"
                android:layout_width="match_parent"
                android:layout_height="1sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/button_background_login" />




        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/buttonsoverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:layout_margin="5dp">
        <Button
            android:id="@+id/btnDineIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_drawable"
            android:text="Dine-In"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnTakeOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@id/btnDineIn"
            android:layout_weight="1"
            android:background="@drawable/button_drawable"
            android:text="Take-Out"
            android:textColor="@color/white"
            android:textSize="16sp" />


    </LinearLayout>



</RelativeLayout>